# HapticPaddle

./: .gitignore  CMakeLists.txt  README.md
include/: HallSensor.hpp  HapticPaddle.hpp
src/: HallSensor.cpp  HapticPaddle.cpp  main.cpp
util/: HapticPaddle.sublime-project  clean.py
